[tool.poetry]
name = "TEMPLATE"
version = "0.1.0"
description = "Project description."
authors = ["My Name me@myself.com"]

[tool.poetry.dependencies]
python = "^3.7"
apispec = "*"
aws-xray-sdk = "*"
boto3 = "*"
factory-boy = "*"
faker = "*"
flask = "*"
flask-cors = "*"
flask-jwt-extended = "*"
flask-migrate = "*"
flask-rest-api = "*"
flask-script = "*"
flask-smorest = "*"
flask-sqlalchemy = "*"
jetkit-flask = "==8.0.0"
marshmallow = "*"
marshmallow-enum = "*"
marshmallow-sqlalchemy = "*"
nplusone = "*"
psycopg2-binary = "*"
requests = "*"
sqlalchemy = "*"
webargs = "*"
werkzeug = "*"

[tool.poetry.dev-dependencies]
bento-cli = "*"
black = "^19.3b0"
cfn-lint = "*"
flake8 = "*"
flask-shell-ipython = "*"
ipdb = "*"
moto = "*"
mypy = "*"
mypy-extensions = "*"
pre-commit = "*"
pudb = "*"
pytest = "*"
pytest-factoryboy = "*"
pytest-flask-sqlalchemy = "*"
pytest-postgresql = "*"
pytest-xdist = "*"
rope = "*"
sphinx = "*"
sphinx-autodoc-typehints = "*"
sphinx-rtd-theme = "*"
sqlalchemy-stubs = "*"
watchdog = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
